--- a/MarvelAPI.ipynb
+++ b/MarvelAPI.ipynb
@@ -135,7 +135,7 @@
         "id": "EZKlW3nTZ__X"
       },
       "source": [
-        "m = Marvel(\"7e674820cfa31156ce7edca15387401c\",\"762964d88b102e42c8bb0f063cc368666f0cb22f\") #m=Marvel(\"PUBLIC_KEY\",\"PRIVATE_KEY\")"
+        "m = Marvel(\"...\",\"...\") #m=Marvel(\"PUBLIC_KEY\",\"PRIVATE_KEY\")"
       ],
       "execution_count": 2,
       "outputs": []
