Creado mediante Colaboratory

--- a/MarvelAPI.ipynb
+++ b/MarvelAPI.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "MarvelAPI.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP84dIVuowuZIeYxCJz7G1f"
+      "authorship_tag": "ABX9TyOgiNKRVxuk9VTlgIjsn4Rx",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/marthainesjc/MarvelAPI/blob/main/MarvelAPI.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -135,7 +146,7 @@
         "id": "EZKlW3nTZ__X"
       },
       "source": [
-        "m = Marvel(\"...\",\"...\") #m=Marvel(\"PUBLIC_KEY\",\"PRIVATE_KEY\")"
+        "m = Marvel(\"7e674820cfa31156ce7edca15387401c\",\"762964d88b102e42c8bb0f063cc368666f0cb22f\") #m=Marvel(\"PUBLIC_KEY\",\"PRIVATE_KEY\")"
       ],
       "execution_count": 2,
       "outputs": []
@@ -198,12 +209,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "unvz2RrQZlae",
-        "outputId": "daa48878-8f34-4478-a668-8b3cddf382a0"
+        "outputId": "80876b78-302b-437e-cf43-4ad37cd8f287"
       },
       "source": [
-        "all_characters"
+        "#all_characters #it does not looks pretty"
       ],
-      "execution_count": 6,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2332,7 +2343,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 20
         }
       ]
     },
